[package]
name = "crossplatform_path"
# binary executable does not need to be SemVer, because nobody depends on it
version = "1.0.6"
description = "Crossplatform Path Rust library"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/crossplatform_path"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "work-in-progress", "rustlang"]
# allowed categories are listed here <https://crates.io/category_slugs>
categories = ["filesystem"]
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
[dependencies]
thiserror = "2.0.16"
anyhow="1.0.97"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.3"
time = {version="0.3.39", features=["macros","local-offset"]}
